<resources>
    <string name="app_name">ShopStore</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="action_websearch">action web search</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">com.example.hp.shoppersstop</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbcom.example.hp.shoppersstop</string>

    <string name="app_not_available">App not available</string>
    <string name="header">Header</string>
    <string name="drawer">Drawer</string>
    <string name="unread_message">Unread Message</string>
    <string name="search_hint">Search product</string>
    <string name="app_label">Shop-E</string>
    <string name="email">email@email.com</string>
    <string name="profile">profile</string>
    <string name="list_image">list image</string>
    <string name="make_list">make list</string>
    <string name="check_list">Check</string>
    <string name="back">back</string>
    <string name="name">Name</string>
    <string name="brand">Brand</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="weight">Weight</string>
    <string name="list_send">list send</string>

    <string-array name="spinner_list">
        <item>Product</item>
        <item>Shop</item>
    </string-array>

    <string-array name="navigation_list">

        <item>Home</item>
        <item>Shop by Category</item>

        <item>Notifications</item>
        <item>Offer Zone</item>

        <item>My Rewards</item>
        <item>My Cart</item>
        <item>My Wish List</item>
        <item>My Orders</item>
        <item>My Account</item>

        <item>Send feedback</item>
        <item>Help Centre</item>
        <item>Legal</item>
    </string-array>

    <string-array name="product_list_department">
        <item>bakery</item>
        <item>clothes</item>
        <item>cosmetics</item>
        <item>electronic</item>
        <item>grocery</item>
        <item>medical</item>
        <item>shoes</item>
        <item>sports</item>
        <item>stationary</item>
        <item>utensils</item>
        <item>vegetables</item>
    </string-array>

    <string-array name="product_list_price">
        <item>Minimum</item>
        <item>Maximum</item>
    </string-array>

    <string-array name="bakery">
        <item>amul</item>
        <item>patanjali</item>
    </string-array>

    <string-array name="grocery">
        <item>cadbury</item>
        <item>kisan</item>
        <item>nescafe</item>
        <item>patanjali</item>
    </string-array>


    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="enter_list">Enter List</string>
    <string name="product_list">Product Lists</string>
    <string name="filter">filter</string>
    <string name="select_all">select all</string>
    <string name="shop_category">Shops Category</string>
    <string name="green_mark">green mark</string>
    <string name="shopList">Shops List</string>
    <string name="search_description">search product/shop</string>
    <string name="action_remove">remove</string>

    <string name="account_profile_picture">account profile picture</string>
    <string name="edit_button">edit button</string>
    <string name="action_select">select</string>
    <string name="selected_counts">%d Selected</string>


    <string name="edit_profile">Edit profile</string>
    <string name="share_win">Share and Win</string>
    <string name="coupons">My Coupons</string>
    <string name="help_and_support">Help and Support</string>
    <string name="about_us">About Us</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="imporve_us">Improve Us</string>
    <string name="log_out">Logout</string>
    <string name="save_btn">Save</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="send_suggestion">SEND</string>
    <string name="your_suggestion_here">Your suggestion here&#8230;</string>
    <string name="information_name">This name will be used while sending list to a shop or while chatting with a shopkeeper.This
    is not a username.</string>
    <string name="heading_text">WalkOver</string>
    <string name="paragraph_text">Walkover brings an all new way for shopping from your nearby stores  now you don\'t need to
    search for a product by going to each and every shop instead you can just tap to Walkover application,type in product name
        and you will get suggestion of where you can find the product.\nIt gives you an option to send virtual list of items to shopkeeper and can get the order after it's ready.
        You can query for the availability of a product by using the chat facility.\nWalkover will bring you the ease which will transform the
        way you do shopping from local shops.\nAn interconnection of local shops you will get the information on your smart phone screens.
    </string>

    <string name="warning_for_name_edit">Name must not contain numbers or special characters (1&#8211;9,.,*,-,_,+,#,@..etc)</string>

    <string name="suggestion_heading">Have some suggestions in your mind?</string>


    <string name="need_location_permission">Location permission Required</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="allow_location_access">Allow location access</string>
    <string name="why_location_is_required">For better results and filtering location is needed please allow access to
            device location Go to Settings->Permission->enable location</string>


    <string name="shop_distance">%1$s km away</string>
    <string name="search">Search</string>
    <string name="map_view">Map View</string>

    <string name="last_seen_at">last seen at %1$s</string>

    <string name="userName">Default name</string>
    <string name="phone">Phone</string>
    <string name="defaultPhone">+91-58838829</string>
    <string name="defaultEmail">xyzuser@xyz.com</string>
    <string name="call_shop">Call?</string>
    <string name="call_text">CALL</string>
    <string name="cancel_text">CANCEL</string>
    <string name="sendlist">Send List</string>
    <string name="title_activity_maps">Map</string>
    <string name="type_a_message">Type a message...</string>
    <string name="display_name">Display name</string>
    <string name="guest_user">Guest User</string>
    <string name="nearby_shops">Nearby Shops</string>
    <string name="chats">Chats</string>
    <string name="offers_shops">Offers</string>
    <string name="main_help">Help</string>

</resources>
