<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".EditProfile">






    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/first_name_hint"
        android:textColor="@color/text_color_for_options"
        android:fontFamily="sans-serif"
        android:background="@drawable/background_for_edit_text"/>

    <TextView
        android:id="@+id/first_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textColor="@color/text_color_for_error"
        android:textSize="13sp"
        android:visibility="gone"
        android:text="@string/warning_for_name_edit"/>

    <EditText

        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/last_name"
        android:textColor="@color/text_color_for_options"
        android:fontFamily="sans-serif"
        android:background="@drawable/background_for_edit_text"/>


    <TextView
        android:id="@+id/last_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textColor="@color/text_color_for_error"
        android:textSize="13sp"
        android:visibility="gone"
        android:text="@string/warning_for_name_edit"/>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:elevation="4dp"
        android:text="@string/save_btn"
        android:textSize="20sp"
        android:textColor="@color/text_color_for_profile_top"

        android:background="@color/common_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:padding="10dp"
        android:text="@string/information_name"/>



</LinearLayout>