<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/common_background"


    tools:context=".ImproveUsActivity">


  <ImageView
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_gravity="center_horizontal"
      android:src="@drawable/ic_idea"
      />



    <TextView
        android:id="@+id/heading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggestion_heading"
        android:textColor="@color/text_color_for_profile_top"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/suggestion_text"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:hint="@string/your_suggestion_here"
        android:padding="3dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white"/>


    <Button
        android:id="@+id/send_suggestion"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/send_suggestion"
        android:textSize="20sp"
        android:textColor="@color/text_color_for_profile_top"

        android:background="@drawable/button_background"/>





</LinearLayout>