<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/main_nearby_shop_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        android:backgroundTint="@color/common_background"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">


            <ImageView
                android:id="@+id/image1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_main_nearby"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearby_shops"
                android:layout_centerVertical="true"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:layout_toRightOf="@+id/image1"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/main_chat_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/common_background"
        app:cardElevation="4dp"

        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">


            <ImageView
                android:id="@+id/image2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_main_chat"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chats"
                android:layout_centerVertical="true"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:layout_toRightOf="@+id/image2"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/main_offer_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/common_background"
        app:cardElevation="4dp"

        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">


            <ImageView
                android:id="@+id/image3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_main_offers"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offers_shops"
                android:layout_centerVertical="true"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:layout_toRightOf="@+id/image3"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/main_help_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/common_background"
        app:cardElevation="4dp"

        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">


            <ImageView
                android:id="@+id/image4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_main_help"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_help"
                android:layout_centerVertical="true"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:layout_toRightOf="@+id/image4"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>






</LinearLayout>